-using spring MVC -using Controller instead of servlets -configuration using @Component annotation and SpringConfig